# bachelor

./: .clangd  .gitignore  Bachelor.xpr  CMakeLists.txt  Makefile  README.md  Vivado.xpr
References/Combined Operations/: Makefile  cell.cpp  cell.hpp  const.hpp  control.cpp  control.hpp  kombi.cpp  kombi.hpp  main  main.cpp  tb.cpp  tb.hpp  wave.vcd
References/Matrix Vector Multiplication/: Makefile  cell.cpp  cell.hpp  const.hpp  main  main.cpp  matrix_vector.cpp  matrix_vector.hpp  matrix_vector_control.cpp  matrix_vector_control.hpp  tb.cpp  tb.hpp  wave.vcd
References/Ternary multiplication/: CMakeLists.txt  Makefile  a.out  addsub.h  exor.cpp  exor.h  fa.cpp  fa.h  four_digit_adder.h  mul.h  reg.cpp  reg.h  reg_2ndOp.cpp  reg_2ndOp.h  reg_B.h  reg_prod.cpp  reg_prod.h  test.cpp  testbench.cpp  testbench.h
References/Ternary multiplication/cpp/: exor.cpp  fa.cpp  reg.cpp  reg_2ndOp.cpp  reg_prod.cpp  test.cpp  testbench.cpp
References/Ternary multiplication/hpp/: addsub.hpp  exor.hpp  fa.hpp  four_digit_adder.hpp  mul.hpp  reg.hpp  reg_2ndOp.hpp  reg_B.hpp  reg_prod.hpp  testbench.hpp
References/Tutorial/: Makefile
Source Code/: Makefile
Source Code/cpp/: adder.cpp  adder_subtractor.cpp  and2.cpp  cell.cpp  combined_operations.cpp  controller.cpp  fir.cpp  fulladder.cpp  main.cpp  matrix_vector.cpp  matrix_vector_control.cpp  multiplier.cpp  multiplier_register.cpp  register.cpp  shift_register.cpp  subtractor.cpp  tb.cpp  testbench.cpp  tutorial.cpp  uart_transmitter.cpp
Source Code/hpp/: adder.hpp  adder_subtractor.hpp  and2.hpp  btint.hpp  cell.hpp  const.hpp  controller.hpp  fir.hpp  fulladder.hpp  io.hpp  main.hpp  matrix_vector.hpp  matrix_vector_control.hpp  multiplier.hpp  multiplier_register.hpp  register.hpp  shift_register.hpp  subtractor.hpp  tb.hpp  testbench.hpp  uart_transmitter.hpp  utils.hpp
Source Code/py/: stream2decimal.py
Source Code/sh/: config.sh  icsc.sh  install.sh
Source Code/xdc/: Zedboard-Master.xdc
Tutorial/: Makefile
Tutorial/cpp/: and2.cpp  fir.cpp
Tutorial/hpp/: tb.hpp
Vivado/: Vivado.xpr
Vivado.runs/.jobs/: vrs_config_1.xml
Vivado.runs/impl_1/: .opt_design.begin.rst  .vivado.begin.rst  MATRIX_VECTOR.tcl  MATRIX_VECTOR.vdi  MATRIX_VECTOR_bus_skew_routed.rpt  MATRIX_VECTOR_bus_skew_routed.rpx  MATRIX_VECTOR_clock_utilization_routed.rpt  (+32 more)
(+378 files in other folders)
