cmake_minimum_required(VERSION 3.12)
enable_testing()
if(NOT DEFINED ENV{ICSC_HOME})
    message("ICSC_HOME is not defined!")
    return()
endif()
project(sata)
find_package(SVC REQUIRED)
set(CMAKE_CXX_STANDARD 17)
include_directories("$ENV{ICSC_HOME}/include" "Source Code/hpp")
file(GLOB SOURCES "Source Code/cpp/*.cpp")
add_executable(sata ${SOURCES})
svc_target(sata INIT_LOCAL_VARS ELAB_TOP system.adder_subtractor)
