cmake_minimum_required(VERSION 3.12)
enable_testing()
if(NOT DEFINED ENV{ICSC_HOME})
    message("ICSC_HOME is not defined!")
    return()
endif()
project(bachelor)
find_package(SVC REQUIRED)
set(CMAKE_CXX_STANDARD 17)
include_directories("$ENV{ICSC_HOME}/include" "References/Combined Operations/hpp")
file(GLOB SOURCES "References/Combined Operations/cpp/*.cpp")
add_executable(bachelor ${SOURCES})
svc_target(bachelor INIT_LOCAL_VARS ELAB_TOP system.combined_operations)

project(uart_transmitter)
add_executable(uart_transmitter ${SOURCES})
svc_target(uart_transmitter INIT_LOCAL_VARS ELAB_TOP system.uart_transmitter)
